--- a/Tov.ipynb
+++ b/Tov.ipynb
@@ -10,6 +10,8 @@
     "from numba import jit\n",
     "import time\n",
     "from scipy.interpolate import interp1d\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "G=1\n",
     "c=1\n",
