--- a/decay_chain_thermal_beta.ipynb
+++ b/decay_chain_thermal_beta.ipynb
@@ -12,6 +12,9 @@
     "import pandas as pd\n",
     "from numpy import pi\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import bateman as bt\n",
     "import thermalization as th\n",
     "import heat as ht\n",
@@ -2624,7 +2627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Thesis",
    "language": "python",
    "name": "python3"
   },
